syntax = "proto3";

service Store {
  rpc create (ApplicationIdCountryRequest) returns (Empty) {}
  rpc findOne (ApplicationIdRequest) returns (Application) {}
  rpc findVersions (ApplicationIdRequest) returns (Empty) {}
}

message Empty {}

message ApplicationIdCountryRequest {
  string application_id = 1;
  string country_id = 2;
}

message ApplicationIdRequest {
  optional string application_id = 1;
  optional string bundle_id = 2;
}

message Application {
  string application_id = 1;
  string developer_id = 2;
  string bundle_id = 3;
  string title = 4;
  string description = 5;
  string release_notes = 6;
  string icon = 7;
  string store_url = 8;
  repeated string languages = 9;
  Screenshot screenshots = 10;
  string version = 11;
  repeated int32 ratings = 12;
  string released_at = 13;
  string updated_at = 14;
}

message Screenshot {
  repeated string default = 1;
  repeated string ipad = 2;
  repeated string appletv = 3;
}
